# ML_Regression_HW2

./: .gitignore  README.md  netid  problems.md  project.md  pyproject.toml
data/: frq.128.csv  frq.16.csv  frq.32.csv  frq.64.csv
feedback/: Apr_28_13_08__2ba6a979_coding.txt  Apr_28_14_05__e2e202f0_coding.txt  Apr_28_14_35__e2e202f0_setup.txt  May_02_14_06__416b55ae_coding.txt  May_02_15_07__e301c8bf_coding.txt  May_02_16_07__048bf26c_coding.txt  May_02_22_07__53c54e3b_coding.txt  May_02_23_07__e04a0fba_coding.txt  May_02_23_40__e04a0fba_leaderboard.txt  May_03_00_07__55f59078_coding.txt  May_03_06_40__55f59078_leaderboard.txt  May_03_11_07__252d331e_coding.txt  May_03_12_41__55f59078_leaderboard.txt
free_response/: custom_transform.py  q1.py  q2.py  q3.py  q4.py  visualize.py
free_response/plots/: README.md
my_project/: my_experiment.py  my_model.py  ~$q4.docx
project/: example.py  hw2_project.csv  my_experiment.py  my_model.py  project.docx  ~$roject.docx
src/: __init__.py  custom_transform.py  data.py  generate_regression_data.py  logistic_regression.py  metrics.py  perceptron.py  regression.py
tests/: conftest.py  rubric.json  test_a_setup.py  test_b_metrics.py  test_d_logreg.py  test_d_polynomial_regression.py  test_f_custom_transform.py
